# TinyGL

./: Changelog  Makefile.am  Makefile.in  README  README.TinyGL  TODO  aclocal.m4  autogen.sh  config.h.in  config.mk  configure  configure.ac
backends/nanox/: glx.c  glx_impl.h  tk.c
backends/sdl/: glx.c  glx_impl.h  tk.c
backends/vesafb/: glx.c  glx_impl.h  kbd.c  kbd.h  keymap_standard.h  tk.c
backends/x11/: glx.c  tk.c
examples/: Makefile.am  Makefile.in  cube.c  gears.c  mech.c  spin.c  texobj.c
include/GL/: glx.h
include/GL/internal/: zmath.h
scripts/: remove-autotool.sh
src/: Makefile.am  Makefile.in  api.c  arrays.c  light.c  zbuffer.c  zdither.c
src/glu/: Makefile.am  Makefile.in
